--- a/account.html
+++ b/account.html
@@ -14,7 +14,7 @@
 }
 body{
   background:#f5f6fb;
-  padding-bottom:90px;
+  padding-bottom:120px;
 }
 
 /* TOP BAR */
@@ -42,13 +42,8 @@ body{
   border-radius:50%;
   object-fit:cover;
 }
-.profile .info{
-  flex:1;
-}
-.profile .name{
-  font-size:16px;
-  font-weight:bold;
-}
+.profile .info{flex:1;}
+.name{font-size:16px;font-weight:bold;}
 .vip{
   background:#fff;
   color:#ff5a5a;
@@ -68,10 +63,7 @@ body{
   border-radius:8px;
   margin-top:4px;
 }
-.last{
-  font-size:12px;
-  opacity:.9;
-}
+.last{font-size:12px;opacity:.9;}
 
 /* BALANCE */
 .balance{
@@ -80,17 +72,14 @@ body{
   padding:16px;
   border-radius:14px;
 }
-.balance h4{
-  color:#777;
-  font-size:14px;
-}
-.balance .amount{
+.balance h4{color:#777;font-size:14px;}
+.amount{
   font-size:28px;
   font-weight:bold;
   margin-top:6px;
 }
 
-/* QUICK ACTIONS */
+/* ACTIONS */
 .actions{
   display:grid;
   grid-template-columns:repeat(4,1fr);
@@ -104,10 +93,7 @@ body{
   text-align:center;
   font-size:13px;
 }
-.action img{
-  width:36px;
-  margin-bottom:6px;
-}
+.action img{width:36px;margin-bottom:6px;}
 
 /* CARDS */
 .cards{
@@ -121,36 +107,28 @@ body{
   border-radius:14px;
   padding:14px;
 }
-.card img{
-  width:36px;
-}
-.card h4{
-  margin-top:6px;
-  font-size:14px;
-}
-.card p{
-  font-size:12px;
-  color:#888;
-}
+.card img{width:36px;}
+.card h4{margin-top:6px;font-size:14px;}
+.card p{font-size:12px;color:#888;}
 
-/* LIST */
-.list{
-  background:#fff;
-  margin:14px;
-  border-radius:14px;
-  overflow:hidden;
+/* LOGOUT */
+.logout-wrap{
+  margin:20px 14px 0;
 }
-.list-item{
+.logout-btn{
+  width:100%;
+  height:48px;
+  border:2px solid #ff9a8b;
+  border-radius:30px;
+  background:transparent;
+  color:#ff6a6a;
+  font-size:16px;
   display:flex;
   align-items:center;
-  gap:12px;
-  padding:14px;
-  border-bottom:1px solid #eee;
+  justify-content:center;
+  gap:10px;
 }
-.list-item:last-child{border:none;}
-.list-item img{
-  width:28px;
-}
+.logout-btn img{width:22px;}
 
 /* BOTTOM NAV */
 .bottom-nav{
@@ -170,21 +148,15 @@ body{
   font-size:12px;
   color:#999;
 }
-.nav-item img{
-  width:30px;
-}
-.nav-item.active{
-  color:red;
-}
-.invite img{
-  width:64px;
-}
+.nav-item img{width:30px;}
+.nav-item.active{color:red;}
+.invite img{width:64px;}
 </style>
 </head>
 
 <body>
 
-<!-- TOP -->
+<!-- HEADER -->
 <div class="header">
   <img src="Image/Mylogo.png">
 </div>
@@ -215,7 +187,7 @@ body{
   <div class="action"><img src="Image/vip.png"><div>VIP</div></div>
 </div>
 
-<!-- CARDS -->
+<!-- HISTORY CARDS -->
 <div class="cards">
   <div class="card">
     <img src="Image/game.png">
@@ -227,28 +199,47 @@ body{
     <h4>Transaction</h4>
     <p>My transaction history</p>
   </div>
+  <div class="card">
+    <img src="Image/deposit.png">
+    <h4>Deposit History</h4>
+    <p>My deposit history</p>
+  </div>
+  <div class="card">
+    <img src="Image/withdraw.png">
+    <h4>Withdraw History</h4>
+    <p>My withdraw history</p>
+  </div>
 </div>
 
-<!-- LIST -->
-<div class="list">
-  <div class="list-item"><img src="Image/deposit.png">Deposit history</div>
-  <div class="list-item"><img src="Image/withdraw.png">Withdraw history</div>
-  <div class="list-item"><img src="Image/notification.png">Notification</div>
-  <div class="list-item"><img src="Image/gift.png">Gifts</div>
-  <div class="list-item"><img src="Image/stats.png">Game statistics</div>
-  <div class="list-item"><img src="Image/lang.png">Language <span style="margin-left:auto;">English</span></div>
+<!-- LOGOUT -->
+<div class="logout-wrap">
+  <button class="logout-btn">
+    ⏻ Log out
+  </button>
 </div>
 
 <!-- BOTTOM NAV -->
 <div class="bottom-nav">
-  <a href="index.html" class="nav-item"><img src="Image/Home.png"><div>Home</div></a>
-  <a href="#" class="nav-item"><img src="Image/Activity.png"><div>Activity</div></a>
+  <a href="index.html" class="nav-item">
+    <img src="Image/Home.png"><div>Home</div>
+  </a>
 
-  <div class="invite"><img src="Image/Invite.png"></div>
+  <a href="#" class="nav-item">
+    <img src="Image/Activity.png"><div>Activity</div>
+  </a>
 
-  <a href="#" class="nav-item"><img src="Image/Wallet.png"><div>Wallet</div></a>
-  <a href="account.html" class="nav-item active"><img src="Image/Account.png"><div>Account</div></a>
+  <div class="invite">
+    <img src="Image/Invite.png">
+  </div>
+
+  <a href="#" class="nav-item">
+    <img src="Image/Wallet.png"><div>Wallet</div>
+  </a>
+
+  <a href="account.html" class="nav-item active">
+    <img src="Image/Account.png"><div>Account</div>
+  </a>
 </div>
 
 </body>
-  </html>
+</html>
