--- a/account.html
+++ b/account.html
@@ -182,15 +182,15 @@ body{
 <!-- ACTIONS -->
 <div class="actions">
   <div class="action"><img src="Image/arwallet.png"><div>ARWallet</div></div>
-  <div class="action"><img src="Image/deposit.png"><div>Deposit</div></div>
-  <div class="action"><img src="Image/withdraw.png"><div>Withdraw</div></div>
-  <div class="action"><img src="Image/vip.png"><div>VIP</div></div>
+  <div class="action"><img src="Image/Deposit.png"><div>Deposit</div></div>
+  <div class="action"><img src="Image/Withdraw.png"><div>Withdraw</div></div>
+  <div class="action"><img src="Image/Vip.png"><div>VIP</div></div>
 </div>
 
 <!-- HISTORY CARDS -->
 <div class="cards">
   <div class="card">
-    <img src="Image/game.png">
+    <img src="Image/Game.history.png">
     <h4>Game History</h4>
     <p>My game history</p>
   </div>
@@ -200,12 +200,12 @@ body{
     <p>My transaction history</p>
   </div>
   <div class="card">
-    <img src="Image/deposit.png">
+    <img src="Image/Deposit.history.png">
     <h4>Deposit History</h4>
     <p>My deposit history</p>
   </div>
   <div class="card">
-    <img src="Image/withdraw.png">
+    <img src="Image/Withdraw.history.png">
     <h4>Withdraw History</h4>
     <p>My withdraw history</p>
   </div>
@@ -214,7 +214,7 @@ body{
 <!-- LOGOUT -->
 <div class="logout-wrap">
   <button class="logout-btn">
-    ⏻ Log out
+     Log out
   </button>
 </div>
 
