--- a/account.html
+++ b/account.html
@@ -216,7 +216,7 @@ body{
   </div>
 
   <div class="action">
-    <img src="Image/Withdraw.png" onerror="this.src='Image/Deposit.png'">
+    <img src="Image/Withdraw.png">
     <div>Withdraw</div>
   </div>
 
@@ -255,7 +255,7 @@ body{
 
 <!-- LOGOUT -->
 <div class="logout-wrap">
-  <button class="logout-btn">⏻ Log out</button>
+  <button class="logout-btn"> Log out</button>
 </div>
 
 <!-- BOTTOM NAV -->
@@ -281,7 +281,7 @@ body{
 
   <a href="account.html" class="nav-item active">
     <img src="Image/Account.png">
-    <div>/div>
+    <div></div>
   </a>
 </div>
 
