--- a/account.html
+++ b/account.html
@@ -260,7 +260,7 @@ body{
 
 <!-- BOTTOM NAV -->
 <div class="bottom-nav">
-  <a href="index.html" class="nav-item">
+  <a href="dashboard.html" class="nav-item">
     <img src="Image/Home.png">
     <div></div>
   </a>
