--- a/account.html
+++ b/account.html
@@ -148,8 +148,8 @@ body{
   color:#999;
 }
 .nav-item img{
-  width:30px;
-  height:30px;
+  width:45px;
+  height:45px;
   display:block;
   margin:0 auto;
 }
@@ -242,12 +242,12 @@ body{
 <div class="bottom-nav">
   <a href="dashboard.html" class="nav-item">
     <img src="Image/Home.png">
-    <div>Home</div>
+    <div></div>
   </a>
 
   <a href="activity.html" class="nav-item">
     <img src="Image/Activity.png">
-    <div>Activity</div>
+    <div></div>
   </a>
 
   <div class="invite">
@@ -256,12 +256,12 @@ body{
 
   <a href="wallet.html" class="nav-item">
     <img src="Image/Wallet.png">
-    <div>Wallet</div>
+    <div></div>
   </a>
 
   <a href="account.html" class="nav-item active">
     <img src="Image/Account.png">
-    <div>Account</div>
+    <div></div>
   </a>
 </div>
 
