--- a/wallet.html
+++ b/wallet.html
@@ -175,7 +175,7 @@ body{
 }
 
 .nav-item img{
-  width:30px;
+  width:45px;
 }
 
 .nav-item.active{
@@ -202,8 +202,8 @@ body{
   <h2>Wallet</h2>
 
   <div class="wallet-balance">
-    <img src="Image/Wallet.png">
-    <h1>₹58.00</h1>
+    <img src="Image/Wallet1.png">
+    <h1>₹00.00</h1>
     <p>Total balance</p>
   </div>
 
@@ -224,7 +224,7 @@ body{
   <div class="circle-wrap">
     <div>
       <div class="circle">100%</div>
-      <div class="circle-text">₹58.00<br>Main wallet</div>
+      <div class="circle-text">₹00.00<br>Main wallet</div>
     </div>
     <div>
       <div class="circle gray">0%</div>
