--- a/dashboard.html
+++ b/dashboard.html
@@ -176,9 +176,9 @@ body{
     <img src="Image/Activity.png">
   </a>
 
-  <div class="invite">
-    <img src="Image/Invite.png">
-  </div>
+  <a href="invite.html" class="invite">
+  <img src="Image/Invite.png">
+  </a>
 
   <a href="wallet.html" class="nav-item">
     <img src="Image/Wallet.png">
