--- a/invite.html
+++ b/invite.html
@@ -315,7 +315,8 @@ bottom-nav{
     <img src="Image/Activity.png">
   </a>
 
-  <a href="invite.html" class="invite">
+  <!-- invite OUTSIDE flex flow -->
+  <a href="invite.html" class="invite-btn">
     <img src="Image/Invite.png">
   </a>
 
@@ -326,7 +327,4 @@ bottom-nav{
   <a href="account.html" class="nav-item">
     <img src="Image/Account.png">
   </a>
-</div>
-
-</body>
-                             </html>
+                          </div>
