--- a/invite.html
+++ b/invite.html
@@ -166,14 +166,12 @@ body{
   display:flex;
   justify-content:space-around;
   align-items:center;
-  z-index:999;
 }
 
 .nav-item{
   text-align:center;
   font-size:12px;
   color:#999;
-  text-decoration:none;
 }
 .nav-item img{
   width:45px;
@@ -181,27 +179,23 @@ body{
   display:block;
   margin:0 auto;
 }
+.nav-item.active{color:red;}
 
-/* ACTIVE */
-.nav-item.active{
-  color:red;
+.invite{
+  width:64px;
+  height:64px;
+  margin-top:-32px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
-.nav-item.active img{
-  filter: brightness(0) saturate(100%) invert(18%) sepia(96%)
-          saturate(7450%) hue-rotate(356deg) brightness(95%) contrast(120%);
-}
-
-/* INVITE CENTER */
-.invite-btn{
-  position:absolute;
-  left:50%;
-  transform:translateX(-50%);
-  top:-36px;
-  z-index:2000;
-}
-.invite-btn img{
+.invite img{
   width:72px;
   height:72px;
+}
+.nav-item.active img{
+ filter: brightness(0) saturate(100%) invert(18%) sepia(96%) 
+        saturate(7450%) hue-rotate(356deg) brightness(95%) contrast(120%);
 }
 </style>
 </head>
