--- a/invite.html
+++ b/invite.html
@@ -262,16 +262,16 @@ body{
 
 <div class="bottom-nav">
   <a href="index.html" class="nav-item">
-    <img src="Image/Home.png">Home
+    <img src="Image/Home.png">
   </a>
   <a href="activity.html" class="nav-item">
-    <img src="Image/Activity.png">Activity
+    <img src="Image/Activity.png">
   </a>
   <a href="wallet.html" class="nav-item">
-    <img src="Image/Wallet.png">Wallet
+    <img src="Image/Wallet.png">
   </a>
   <a href="account.html" class="nav-item active">
-    <img src="Image/Account.png">Account
+    <img src="Image/Account.png">
   </a>
 </div>
 
