--- a/invite.html
+++ b/invite.html
@@ -162,7 +162,13 @@ body{
   filter: brightness(0) saturate(100%) invert(18%) sepia(96%)
           saturate(7450%) hue-rotate(356deg) brightness(95%) contrast(120%);
 }
-
+.invite{
+  margin-top:-32px;
+}
+.invite img{
+  width:72px;
+  height:72px;
+}
 /* ✅ INVITE FLOAT BUTTON (FINAL FIX) */
         /* ✅ perfect center overlap */
   left:50%;
@@ -260,7 +266,7 @@ body{
 
 <div class="bottom-nav">
 
-  <a href="index.html" class="nav-item">
+  <a href="dashboard.html" class="nav-item">
     <img src="Image/Home.png">
   </a>
 
